DH: fix scroll on iphone

--- a/wp-content/themes/denholm/scss/components/_landing.scss
+++ b/wp-content/themes/denholm/scss/components/_landing.scss
@@ -514,3 +514,11 @@
     display: none;
   }
 }
+
+.landing-wrap {
+  @include susy-media(mobileOnly) {
+    overflow-x: hidden;
+    position: relative;
+    width: 100%;
+  }
+}
